--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@
 
 
 
-<p>Our website address is: https://amsterdamoil.github.io/information/.</p>
+<p>Our website address is:  https://hollandolja.github.io/bistand/.</p>
 
 
 
